[package]
name = "loopgen"
version = "0.1.0"
edition = "2021"
description = "Agentic loop runner for Claude Code — drives `claude -p` in an iterative loop with a LOOP_STATUS termination contract."
license = "MIT"
repository = "https://github.com/marcuspat/loopgen-rs"
keywords = ["claude", "cli", "agentic", "automation", "llm"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "loopgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[profile.release]
strip = true
